# medialaxis3d

./: README.md  pyproject.toml  setup.py  test_visualization.py
.github/workflows/: python-package.yml
medialaxis3d/: __init__.py
src/medialaxis3d/: __init__.py
tests/: test_skel.py
