[build-system]
requires = ["setuptools", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = 'medialaxis3d'
version = '1.0.0'
description = 'Module to perform 3D skeletonization using Medial Axis Transform'
keywords = ["MAT", "skeletonization", "3D"]
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Giovanni Bocchi", email = "giovanni.bocchi1@unimi.it" }]
maintainers = [{ name = "Giovanni Bocchi", email = "giovanni.bocchi1@unimi.it" }]
classifiers = [

  "Development Status :: 4 - Beta",

  "Intended Audience :: Science/Researche",
  "Topic :: Binary skeletonization :: Image processing",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",

  "Operating System :: OS Independent",
]

dependencies = [
    "scipy>=1.15.2",
	"numpy>=2.1.3",
	"cython>=3.0.11"
]

[project.optional-dependencies]
visualization = ["napari>=0.5.6"]

#[project.urls]
#"Homepage" = "https://github.com/pypa/sampleproject"
#"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
#"Funding" = "https://donate.pypi.org"
#"Say Thanks!" = "http://saythanks.io/to/example"
#"Source" = "https://github.com/pypa/sampleproject/"

[tool.setuptools]
package-data = { "medialaxis3d.tables" = ["*.npz"] }
